# courses_project

./: .dockerignore  docker-compose.yml
backend/: .gitignore  Makefile  example.env  manage.py  pyproject.toml
backend/.github/workflows/: master.yml
backend/apps/courses/: admin.py  apps.py  models.py
backend/apps/courses/api/v1/: serializers.py  urls.py  views.py
backend/apps/courses/migrations/: 0001_initial.py  0002_alter_courses_status.py  0003_alter_courses_options_alter_courses_status_and_more.py  0004_alter_courses_options_and_more.py  0005_alter_courses_options.py  0006_alter_courses_sections_options_and_more.py  0007_alter_courses_duration.py  0008_alter_section_lessons_duration.py  0009_remove_section_lessons_additional_materials_and_more.py  0010_alter_lessons_materials_content.py  0011_alter_lessons_materials_content.py  0012_alter_lessons_materials_content.py  0013_lessons_materials_url.py
backend/apps/courses/tests/: test_generate_date.py
backend/apps/users/: models.py
backend/apps/users/api/v1/: serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/core/: celery.py  s3_storage.py  urls.py
backend/core/settings/: base.py  development.py  production.py
backend/core/utils/: exceptions.py  models.py  utils.py  views.py
backend/docker/: server-entrypoint.sh  worker-entrypoint.sh
backend/docker/backend/: Dockerfile
backend/docker/nginx/: default.conf
backend/templates/emails/: reset_password_email.html  verification_email.html
